--- a/style.css
+++ b/style.css
@@ -14,11 +14,13 @@ body {
 }
 
 .display {
-    font-size: 200px;
+    font-size: 100px;
+    text-align: center;
 }
 
-.button button {
-    margin: 0 10px;
+button {
+    margin: 20px 0;
     padding: 20px;
     border-radius: 40px;
 }
+
